--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
 .center {
     text-align: center;
 }
+
+button {
+    width: 20%;
+    height: 100px;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
