--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@
 }
 
 button {
-    width: 20%;
-    height: 100px;
+    width: 200px;
+    height: 300px;
     background-color: #4CAF50;
     border: none;
     color: white;
