--- a/css/main.css
+++ b/css/main.css
@@ -78,3 +78,15 @@ input[type=text]:focus, textarea:focus {
 .dark {
     background-color: rgb(221, 221, 221);
 }
+
+.yellow {
+    background-color: rgb(240, 255, 188);
+}
+
+.blue {
+    background-color: rgb(188, 225, 255);
+}
+
+.pink {
+    background-color: rgb(255, 201, 188);
+}
