--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,9 @@
 }
 
 button {
-    width: 200px;
+    width: 80px;
     height: 30px;
-    background-color: #4CAF50;
+    background-color: #172fb8;
     border: none;
     color: white;
     
