--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
     text-align: center;
 }
 
+.right {
+    text-align: right;
+}
+
 button {
     width: 80px;
     height: 30px;
@@ -25,11 +29,6 @@ button {
     text-align: center;
 }
 
-span {
-    background-color: #CCCCCC;
-    font-size: 32px;
-    font-family: "微软雅黑";
-}
 
 .input {
     border: 1px solid #6666FF;
@@ -80,7 +79,11 @@ input[type=text]:focus, textarea:focus {
 }
 
 .yellow {
-    background-color: rgb(240, 255, 188);
+    background-color: rgb(149, 165, 89);
+}
+
+.orange {
+    background-color: rgb(218, 168, 60);
 }
 
 .blue {
@@ -94,3 +97,44 @@ input[type=text]:focus, textarea:focus {
 .green {
     background-color: rgb(181, 255, 197);
 }
+
+.white {
+    background-color: rgb(255, 255, 255);
+}
+
+.func {
+    /* position: relative; */
+    /* width: 200px; */
+    height: 150px;
+    /* float:left; */
+    
+	
+    /* background-color: rgb(104, 157, 255); */
+    /* display: inline-block; */
+    
+}
+
+#nav {
+    background-color: rgb(104, 157, 255);
+}
+
+/* #F01 {
+    background-color: rgb(128, 150, 89);
+
+}
+
+#F02 {
+    background-color: rgb(36, 131, 72);
+
+}
+
+#F03 {
+    background-color: rgb(0, 146, 134);
+
+}
+
+#F04 {
+    background-color: rgb(160, 71, 123);
+
+} */
+
