--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,12 @@
     text-align: right;
 }
 
+.text_white {
+    /* color: white; */
+    color: rgb(255, 255, 255);
+    
+}
+
 button {
     width: 80px;
     height: 30px;
