--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ input[type=text]:focus, textarea:focus {
 }
 
 .yellow {
-    background-color: rgb(149, 165, 89);
+    background-color: rgb(252, 228, 16);
 }
 
 .orange {
@@ -141,4 +141,14 @@ input[type=text]:focus, textarea:focus {
 
 #main_content {
     margin-top: 60px;
+}
+
+#feedback {
+    position: fixed;
+    right: -30px;
+    bottom: 100px;
+    font-size: 15px;
+    color: tomato;
+    transform: rotate(90deg);
+
 }
