--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,15 @@ button {
 }
 
 
+.decisionButton {
+    width: 200px;
+    height: 150px;
+    background-color: #1bb0c4;
+}
+
+
+
+
 .div {
     border: green 1px;
     border-style: solid;
@@ -165,7 +174,7 @@ input[type=text]:focus, textarea:focus {
     right: -30px;
     bottom: 100px;
     font-size: 15px;
-    color: tomato;
+    color: rgb(255, 255, 255);
     transform: rotate(90deg);
 
 }
