--- a/css/main.css
+++ b/css/main.css
@@ -170,20 +170,24 @@ input[type=text]:focus, textarea:focus {
 }
 
 #feedback {
+    width: 50px;
+    height: 50px;
+    background-color: rgb(255, 67, 67);
     position: fixed;
-    right: -30px;
-    bottom: 100px;
-    font-size: 15px;
+    right: 20px;
+    bottom: 70px;
+    font-size: 8px;
     color: rgb(255, 255, 255);
-    transform: rotate(90deg);
+    /* transform: rotate(90deg); */
+    border-radius: 50%;
 
 }
 
 
 #text-feedback {
     position: fixed;
-    right: 5%;
-    bottom: 60px;
+    right: 100px;
+    bottom: 70px;
 }
 
 .cursor_pointer {
